# Youtube_OpenGL

./: .gitignore  CMakeLists.txt
res/shaders/: Basic.shader
src/: Application.cc  IndexBuffer.cc  IndexBuffer.h  Renderer.cc  Renderer.h  Shader.cc  Shader.h  Texture.cc  Texture.h  VertexArray.cc  VertexArray.h  VertexBuffer.cc  VertexBuffer.h  VertexBufferLayout.h
src/tests/: Test.cc  Test.h  TestClearColor.cc  TestClearColor.h  TestTexture2D.cc  TestTexture2D.h
